css/style.css
/* ... */
/* line 126, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_bradcam.scss */
.popup_box .nice-select::after {
  content: "\e64b";
  display: block;
  height: 5px;
  margin-top: -5px;
  pointer-events: none;
  position: absolute;
  right: 17px;
  top: 3px;
  transition: all 0.15s ease-in-out;
  width: 5px;
  font-family: 'themify';
  color: #FAFAFA;
  font-size: 16px;
  right: 40px;
}

/* line 142, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_bradcam.scss */
.popup_box .nice-select.open .list {
  opacity: 1;
  pointer-events: auto;
  -webkit-transform: scale(1) translateY(0);
  -ms-transform: scale(1) translateY(0);
  transform: scale(1) translateY(0);
  height: 200px;
  overflow-y: scroll;
}

/* line 151, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_bradcam.scss */
.popup_box .nice-select.list {
  height: 200px;
  overflow-y: scroll;
}

/* line 155, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_bradcam.scss */
.popup_box .nice-select:focus {
  outline: none;
  border-color: #FAFAFA;
}

/* line 161, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_bradcam.scss */
#test-form {
  display: inline-block;
  margin: auto;
  text-align: center;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

/* line 169, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_bradcam.scss */
#test-form .mfp-close-btn-in .mfp-close {
  color: #000000;
  display: none !important;
}

/* line 174, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_bradcam.scss */
#test-form button.mfp-close {
  display: none !important;
}

/* line 179, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_bradcam.scss */
.mfp-bg {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1042;
  overflow: hidden;
  position: fixed;
  background: #2C2C2C;
  opacity: .7;
}

/* line 190, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_bradcam.scss */
.gj-picker-md div[role="navigator"] div:first-child, .gj-picker-md div[role="navigator"] div:last-child {
  width: 42px;
  height: 42px;
  text-align: center;
  line-height: 42px;
  color: #2C2C2C;
  border: 1px solid #2C2C2C;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  border-radius: 50%;
}

/* line 198, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_bradcam.scss */
.gj-picker-md div[role="navigator"] div:first-child i, .gj-picker-md div[role="navigator"] div:last-child i {
  font-size: 16px;
  line-height: 42px;
  position: relative;
  top: -1px;
}

/* line 204, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_bradcam.scss */
.gj-picker-md div[role="navigator"] div:first-child:hover, .gj-picker-md div[role="navigator"] div:last-child:hover {
  color: #FAFAFA;
  background: #2C2C2C;
}

/* line 209, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_bradcam.scss */
.gj-textbox-md:focus, .gj-textbox-md:active {
  border-bottom: 1px solid rgba(0, 0, 0, 0.42);
}

/* line 217, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_bradcam.scss */
.gj-datepicker-md [role="right-icon"], .gj-timepicker-md [role="right-icon"] {
  position: absolute;
  right: 0px;
  top: 0px;
  font-size: 14px;
  color: #FAFAFA;
  margin-right: 15px;
  top: 20px;
  font-size: 18px;
}

/* line 231, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_bradcam.scss */
.book_apointment_area .popup_box {
  width: 100% !important;
}

/* line 2, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_reason.scss */
.reson_area .single_reson {
  position: relative;
}

@media (max-width: 767px) {
  /* line 2, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_reason.scss */
  .reson_area .single_reson {
    margin-bottom: 30px;
  }
}

@media (min-width: 768px) and (max-width: 991px) {
  /* line 2, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_reason.scss */
  .reson_area .single_reson {
    margin-bottom: 40px;
  }
}

/* line 10, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_reason.scss */
.reson_area .single_reson .thum {
  margin-right: 84px;
  padding-bottom: 84px;
}

/* line 13, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_reason.scss */
.reson_area .single_reson .thum .thum_1 {
  -webkit-border-radius: 9px;
  -moz-border-radius: 9px;
  border-radius: 9px;
  overflow: hidden;
}

/* line 16, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_reason.scss */
.reson_area .single_reson .thum .thum_1 img {
  width: 100%;
  -webkit-border-radius: 9px;
  -moz-border-radius: 9px;
  border-radius: 9px;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: 0.3s;
  -moz-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
}

/* line 25, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_reason.scss */
.reson_area .single_reson .help_content {
  background: #FAFAFA;
  position: absolute;
  bottom: 0;
  right: 0;
  -webkit-border-radius: 7px;
  -moz-border-radius: 7px;
  border-radius: 7px;
  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
  -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
  padding: 47px 40px 33px 40px;
  left: 46px;
}

/* line 34, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_reason.scss */
.reson_area .single_reson .help_content h4 {
  font-size: 20px;
  font-weight: 400;
}

/* line 38, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_reason.scss */
.reson_area .single_reson .help_content p {
  margin-top: 21px;
  margin-bottom: 30px;
}

/* line 42, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_reason.scss */
.reson_area .single_reson .help_content .read_more {
  font-size: 16px;
  color: #FAFAFA;
  text-transform: capitalize;
  position: relative;
  display: inline-block;
  padding-left: 68px;
}
/* ... */

